moved takephoto to a nested routes style

--- a/ember-stereophoto/app/templates/stereos.hbs
+++ b/ember-stereophoto/app/templates/stereos.hbs
@@ -1,5 +1,3 @@
-<h1>{{appName}}</h1>
-{{#each stereos as |stereo|}}
-	{{stereo-icon stereo}}
-{{/each}}
+<h1>Stereos</h1>
 {{ outlet }}
+<p>template: stereos.hbs</p>
