refactored to use components

--- a/ember-stereophoto/app/templates/stereos/camera-stream.hbs
+++ b/ember-stereophoto/app/templates/stereos/camera-stream.hbs
@@ -1,4 +1,4 @@
-<h2 id="camera">Camera stream</h2>
+<h2 id="camera">Camera stream from comp</h2>
 {{#if left}}
 	<button {{ action 'takeLeftPhoto' }}>take left photo</button>
 {{else}}
