--- a/ember-stereophoto/app/templates/stereos/new.hbs
+++ b/ember-stereophoto/app/templates/stereos/new.hbs
@@ -2,5 +2,12 @@
 	<h3>Align Photos</h3>
 	<button {{ action 'save' }}>save</button>
 {{else }}
-	{{ partial "stereos/camera-stream" }}
+	<h2 id="camera">Camera stream</h2>
+	{{#if left}}
+		left
+		{{ stereos.show-stream action='takeLeftPhoto' photoName='left' }}
+	{{else}}
+		right
+		{{ stereos.show-stream action='takeRightPhoto' photoName='right' }}
+	{{/if}}
 {{/if}}
