--- a/ember-stereophoto/app/templates/stereos/new.hbs
+++ b/ember-stereophoto/app/templates/stereos/new.hbs
@@ -1,10 +1,6 @@
-{{#if align }}
-	<h3>Align Photos</h3>
+<div class="wrapper"><img src="{{ model.leftPhoto }}" id='position-left'/></div>
+<div class="wrapper"><img src="{{ model.rightPhoto }}" id='position-right'/></div>
+<div class="buttons">
 	<button {{ action 'save' }}>save</button>
-{{else }}
-	{{#if left}}
-		{{ stereos.show-stream action='takeLeftPhoto' photoName='left' }}
-	{{else}}
-		{{ stereos.show-stream action='takeRightPhoto' photoName='right' }}
-	{{/if}}
-{{/if}}
+	<button {{ action 'cancel' }}>cancel</button>
+</div>
