--- a/ember-stereophoto/app/templates/stereos/new.hbs
+++ b/ember-stereophoto/app/templates/stereos/new.hbs
@@ -1,6 +1,6 @@
-<div class="wrapper"><img src="{{ model.leftPhoto }}" id='position-left'/></div>
-<div class="wrapper"><img src="{{ model.rightPhoto }}" id='position-right'/></div>
-<div class="buttons">
+<div class="align-wrapper"><img src="{{ model.leftPhoto }}" id='position-left'/></div>
+<div class="align-wrapper"><img src="{{ model.rightPhoto }}" id='position-right'/></div>
+<div class="align-buttons">
 	<button {{ action 'save' }}>save</button>
 	<button {{ action 'cancel' }}>cancel</button>
 </div>
