--- a/ember-stereophoto/app/styles/app.css
+++ b/ember-stereophoto/app/styles/app.css
@@ -1,4 +1,38 @@
-video {
+* {
+    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+}
+
+html {
+	height: 100%;
+	font-size: 62.5%;							/* 1rem ~ 10px */
+}
+
+body {
+    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
+    background-color:#E4E4E4;
+    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        color-stop(0, #A7A7A7),
+        color-stop(0.51, #E4E4E4)
+    );
+    background-attachment:fixed;
+    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-size:12px;
+    height:100%;
+    margin:0px;
+    padding:0px;
+    text-transform:uppercase;
+    width:100%;
+}
+
+/* webRTC video {
 	position: fixed,
 	left: 0;
 	top: 0;
@@ -7,4 +41,26 @@ video {
 }
 .offscrean {
 	display: none;
+} */
+
+
+
+
+/* align page */
+.align-wrapper {
+	position: relative;
+	float: left;
+	width: 50%;
+	height: 100%;
+	overflow: hidden;
 }
+
+.align-wrapper img {
+    position: relative;             
+    left:0;
+    top:0;
+	width: 105%;
+}
+
+
+@import('./buttons.css');
