buttons styled on top of images, some old code from model removed

--- a/ember-stereophoto/app/styles/app.scss
+++ b/ember-stereophoto/app/styles/app.scss
@@ -47,7 +47,9 @@ body {
 
 
 /* align page */
+
 .align-wrapper {
+	background: black;
 	position: relative;
 	float: left;
 	width: 50%;
@@ -62,5 +64,14 @@ body {
 	width: 105%;
 }
 
+.align-buttons {
+	position: absolute;
+	z-index: 999;
+	left: calc(50% - 70px);
+	bottom: 10px;
+	width: 140px;
+	opacity: 0.5;
+	text-align: center;
+}
 
 @import 'buttons.scss';
