--- a/ember-stereophoto/app/styles/app.scss
+++ b/ember-stereophoto/app/styles/app.scss
@@ -46,4 +46,5 @@ body {
 
 @import 'buttons.scss';
 @import 'align.scss';
-@import 'presentation.scss';
+@import 'stereo.scss';
+@import 'anaglyph.scss';
