anaglyph mode added

--- a/ember-stereophoto/app/styles/align.scss
+++ b/ember-stereophoto/app/styles/align.scss
@@ -1,6 +1,6 @@
 /* align page */
 
-.align-wrapper {
+.image-wrapper {
 	background: black;
 	position: relative;
 	float: left;
@@ -9,7 +9,7 @@
 	overflow: hidden;
 }
 
-.align-wrapper img {
+.image-wrapper img {
     position: relative;             
     left:0;
     top:0;
