--- a/ember-stereophoto/app/templates/components/stereos/align-photos.hbs
+++ b/ember-stereophoto/app/templates/components/stereos/align-photos.hbs
@@ -1,7 +1,7 @@
 {{!templates/components/stereos/align.hbs}}
 <section id="align-photos">
-	<div class="align-wrapper"><img src="{{ photos.leftPhoto }}" id='position-left'/></div>
-	<div class="align-wrapper"><img src="{{ photos.rightPhoto }}" id='position-right'/></div>
+	<div class="image-wrapper"><img src="{{ photos.leftPhoto }}" id='position-left'/></div>
+	<div class="image-wrapper"><img src="{{ photos.rightPhoto }}" id='position-right'/></div>
 	<div class="align-buttons">
 		<button {{ action 'save' photos positionLeft positionRight }}>save</button>
 		<button {{ action 'cancel' }}>cancel</button>
