--- a/ember-stereophoto/app/templates/stereos/new.hbs
+++ b/ember-stereophoto/app/templates/stereos/new.hbs
@@ -1,1 +1,1 @@
-{{ stereos.align-photos action="saveModel" photos=model }}
+{{ stereos.align-photos saveAction="saveModel" cancelAction="cancelModel" photos=model }}
